--- a/index.css
+++ b/index.css
@@ -132,16 +132,53 @@ h1 {
 }
 
 .password {
-    display: flex;
     background-color: #273549;
     width: 200px;
     height: 39px;
-    align-items: center;
-    justify-content: center;
     font-size: 20px;
     line-height: 40px;
     border-radius: 5px;
     color: #55F991;
     padding: 5px 30px;
     margin: 0px 0px 5px 0px;
+    text-align: center;
 }
+
+.password > p {
+    margin: 0px;
+}
+
+#passwords-container .tooltip {
+    visibility: hidden;
+    z-index: 1;
+    position: relative;
+    bottom: 70px;
+
+
+    font-size: 15px;
+    line-height: 20px;
+    background-color: #6B7280;
+    text-align: center;
+    width: 150px;
+    padding: 0 0 0 7px;
+    border-radius: 3px;
+}
+
+#passwords-container .tooltip::after {
+    content: "";
+    border-width: 5px;
+    border-style: solid;
+    border-color:#6B7280 transparent transparent transparent;   
+    position: relative;
+    right: 15px;    
+    top: 23px;
+}
+
+#password1:hover .tooltip, #password2:hover .tooltip {
+    visibility: visible;
+}
+
+#password1:active > p, #password2:active > p{
+    color: #ffffff;
+}
+
